--- a/src/main/resources/assets/worldreloader/lang/zh_cn.json
+++ b/src/main/resources/assets/worldreloader/lang/zh_cn.json
@@ -1,31 +1,31 @@
 {
-  "mod.worldreloader": "世界重载器",
+  "mod.worldreloader": "World Reloader",
 
-  "text.autoconfig.worldreloader.title": "世界重载器配置",
+  "text.autoconfig.worldreloader.title": "配置",
 
   "text.autoconfig.worldreloader.category.Main": "主要设置",
-  "text.autoconfig.worldreloader.option.UseSurface": "使用表面生成",
-  "text.autoconfig.worldreloader.option.UseSurface.@Tooltip": "是否启用表面地形生成功能",
+  "text.autoconfig.worldreloader.option.UseSurface": "使用有损生成",
+  "text.autoconfig.worldreloader.option.UseSurface.@Tooltip": "是否启用有损地形生成功能",
   "text.autoconfig.worldreloader.option.maxRadius": "最大半径",
   "text.autoconfig.worldreloader.option.maxRadius.@Tooltip": "地形改造的最大半径范围",
   "text.autoconfig.worldreloader.option.itemCleanupInterval": "物品清理间隔",
   "text.autoconfig.worldreloader.option.itemCleanupInterval.@Tooltip": "清理掉落物品的时间间隔（刻）",
 
-  "text.autoconfig.worldreloader.category.surface": "表面设置",
-  "text.autoconfig.worldreloader.option.totalSteps": "总步骤数",
-  "text.autoconfig.worldreloader.option.totalSteps.@Tooltip": "控制改造速度的间隔变量 - 每10刻完成一个半径",
+  "text.autoconfig.worldreloader.category.surface": "有损生成模式设置",
+  "text.autoconfig.worldreloader.option.totalSteps": "步骤数",
+  "text.autoconfig.worldreloader.option.totalSteps.@Tooltip": "控制一个半径花费多少刻完成",
   "text.autoconfig.worldreloader.option.DESTROY_DEPTH": "破坏深度",
-  "text.autoconfig.worldreloader.option.DESTROY_DEPTH.@Tooltip": "表面破坏的深度限制",
+  "text.autoconfig.worldreloader.option.DESTROY_DEPTH.@Tooltip": "有损生成破坏的深度限制",
   "text.autoconfig.worldreloader.option.DESTROY_HEIGHT": "破坏高度",
-  "text.autoconfig.worldreloader.option.DESTROY_HEIGHT.@Tooltip": "表面破坏的高度限制",
+  "text.autoconfig.worldreloader.option.DESTROY_HEIGHT.@Tooltip": "有损生成破坏的高度限制",
   "text.autoconfig.worldreloader.option.COPY_DEPTH": "复制深度",
-  "text.autoconfig.worldreloader.option.COPY_DEPTH.@Tooltip": "表面复制的深度限制",
+  "text.autoconfig.worldreloader.option.COPY_DEPTH.@Tooltip": "有损生成复制的深度限制",
   "text.autoconfig.worldreloader.option.COPY_HEIGHT": "复制高度",
-  "text.autoconfig.worldreloader.option.COPY_HEIGHT.@Tooltip": "表面复制的高度限制",
+  "text.autoconfig.worldreloader.option.COPY_HEIGHT.@Tooltip": "有损生成复制的高度限制",
 
-  "text.autoconfig.worldreloader.category.Non-surface": "非表面设置",
-  "text.autoconfig.worldreloader.option.paddingCount": "填充数量",
-  "text.autoconfig.worldreloader.option.paddingCount.@Tooltip": "非表面生成的填充区块数量",
+  "text.autoconfig.worldreloader.category.Non-surface": "正常模式设置",
+  "text.autoconfig.worldreloader.option.paddingCount": "边缘过渡半径",
+  "text.autoconfig.worldreloader.option.paddingCount.@Tooltip": "生成边缘的地形高度过渡半径",
 
 
   "text.autoconfig.worldreloader.category.Structure Mappings": "映射",
