--- a/src/main/resources/assets/worldreloader/lang/zh_cn.json
+++ b/src/main/resources/assets/worldreloader/lang/zh_cn.json
@@ -5,6 +5,10 @@
   "text.autoconfig.worldreloader.title": "配置",
 
   "text.autoconfig.worldreloader.category.Main": "主要设置",
+  "text.autoconfig.worldreloader.option.UseSpecificPos": "指定目标地形坐标",
+  "text.autoconfig.worldreloader.option.Posx": "指定坐标——x",
+  "text.autoconfig.worldreloader.option.Posy": "指定坐标——y",
+  "text.autoconfig.worldreloader.option.Posz": "指定坐标——z",
   "text.autoconfig.worldreloader.option.UseSurface": "使用有损生成",
   "text.autoconfig.worldreloader.option.UseSurface.@Tooltip": "是否启用有损地形生成功能",
   "text.autoconfig.worldreloader.option.maxRadius": "最大半径",
