--- a/src/main/resources/assets/worldreloader/lang/zh_cn.json
+++ b/src/main/resources/assets/worldreloader/lang/zh_cn.json
@@ -5,6 +5,7 @@
   "text.autoconfig.worldreloader.title": "配置",
 
   "text.autoconfig.worldreloader.category.Main": "主要设置",
+  "text.autoconfig.worldreloader.option.targetYmin": "目标最低高度",
   "text.autoconfig.worldreloader.option.UseSpecificPos": "指定目标地形坐标",
   "text.autoconfig.worldreloader.option.Posx": "指定坐标——x",
   "text.autoconfig.worldreloader.option.Posy": "指定坐标——y",
