彻底重构模组主类!!!!!!!

--- a/src/main/resources/assets/worldreloader/lang/en_us.json
+++ b/src/main/resources/assets/worldreloader/lang/en_us.json
@@ -25,14 +25,8 @@
   "text.autoconfig.worldreloader.category.surface": "Destructive Generation Settings",
   "text.autoconfig.worldreloader.option.totalSteps": "Interval (Ticks)",
   "text.autoconfig.worldreloader.option.totalSteps.@Tooltip": "Controls how many ticks are spent per radius",
-  "text.autoconfig.worldreloader.option.DESTROY_DEPTH": "Destruction Depth",
-  "text.autoconfig.worldreloader.option.DESTROY_DEPTH.@Tooltip": "Depth limit for destruction in destructive generation",
-  "text.autoconfig.worldreloader.option.DESTROY_HEIGHT": "Destruction Height",
-  "text.autoconfig.worldreloader.option.DESTROY_HEIGHT.@Tooltip": "Height limit for destruction in destructive generation",
-  "text.autoconfig.worldreloader.option.COPY_DEPTH": "Copy Depth",
-  "text.autoconfig.worldreloader.option.COPY_DEPTH.@Tooltip": "Depth limit for copying in destructive generation",
-  "text.autoconfig.worldreloader.option.COPY_HEIGHT": "Copy Height",
-  "text.autoconfig.worldreloader.option.COPY_HEIGHT.@Tooltip": "Height limit for copying in destructive generation",
+  "text.autoconfig.worldreloader.option.DEPTH": "Destruction/Copy Depth",
+  "text.autoconfig.worldreloader.option.HEIGHT": "Destruction/Copy Height",
 
   "text.autoconfig.worldreloader.category.Non-surface": "Normal Mode Settings",
   "text.autoconfig.worldreloader.option.paddingCount": "Edge Transition Radius",
