--- a/src/main/resources/assets/worldreloader/lang/zh_cn.json
+++ b/src/main/resources/assets/worldreloader/lang/zh_cn.json
@@ -25,14 +25,8 @@
   "text.autoconfig.worldreloader.category.surface": "有损生成模式设置",
   "text.autoconfig.worldreloader.option.totalSteps": "间隔时间（刻）",
   "text.autoconfig.worldreloader.option.totalSteps.@Tooltip": "控制一个半径花费多少刻完成",
-  "text.autoconfig.worldreloader.option.DESTROY_DEPTH": "破坏深度",
-  "text.autoconfig.worldreloader.option.DESTROY_DEPTH.@Tooltip": "有损生成破坏的深度限制",
-  "text.autoconfig.worldreloader.option.DESTROY_HEIGHT": "破坏高度",
-  "text.autoconfig.worldreloader.option.DESTROY_HEIGHT.@Tooltip": "有损生成破坏的高度限制",
-  "text.autoconfig.worldreloader.option.COPY_DEPTH": "复制深度",
-  "text.autoconfig.worldreloader.option.COPY_DEPTH.@Tooltip": "有损生成复制的深度限制",
-  "text.autoconfig.worldreloader.option.COPY_HEIGHT": "复制高度",
-  "text.autoconfig.worldreloader.option.COPY_HEIGHT.@Tooltip": "有损生成复制的高度限制",
+  "text.autoconfig.worldreloader.option.DEPTH": "破坏/复制深度",
+  "text.autoconfig.worldreloader.option.HEIGHT": "破坏/复制高度",
 
   "text.autoconfig.worldreloader.category.Non-surface": "正常模式设置",
   "text.autoconfig.worldreloader.option.paddingCount": "边缘过渡半径",
