--- a/src/main/resources/assets/worldreloader/lang/zh_cn.json
+++ b/src/main/resources/assets/worldreloader/lang/zh_cn.json
@@ -5,11 +5,13 @@
   "text.autoconfig.worldreloader.title": "配置",
 
   "text.autoconfig.worldreloader.category.Main": "主要设置",
+  "text.autoconfig.worldreloader.category.Special": "陨风大大看这里",
   "text.autoconfig.worldreloader.option.targetYmin": "目标最低高度",
   "text.autoconfig.worldreloader.option.UseSpecificPos": "指定目标地形坐标",
-  "text.autoconfig.worldreloader.option.Posx": "指定坐标——x",
-  "text.autoconfig.worldreloader.option.Posy": "指定坐标——y",
-  "text.autoconfig.worldreloader.option.Posz": "指定坐标——z",
+  "text.autoconfig.worldreloader.option.Posx": "目标地形坐标——x",
+  "text.autoconfig.worldreloader.option.Posy": "目标地形坐标——y",
+  "text.autoconfig.worldreloader.option.Posz": "目标地形坐标——z",
+
   "text.autoconfig.worldreloader.option.UseSurface": "使用有损生成",
   "text.autoconfig.worldreloader.option.UseSurface.@Tooltip": "是否启用有损地形生成功能",
   "text.autoconfig.worldreloader.option.maxRadius": "最大半径",
