--- a/src/main/resources/assets/worldreloader/lang/zh_cn.json
+++ b/src/main/resources/assets/worldreloader/lang/zh_cn.json
@@ -54,7 +54,9 @@
   "text.autoconfig.worldreloader.option.StructureMapping.enabled": "是否启用",
   "text.autoconfig.worldreloader.option.BiomeMapping.enabled": "是否启用",
   "text.autoconfig.worldreloader.option.StructureMapping": "元素",
-  "text.autoconfig.worldreloader.option.BiomeMapping": "元素"
+  "text.autoconfig.worldreloader.option.BiomeMapping": "元素",
+
+  "item.worldreloader.crystal": "群系共鸣水晶"
 
 
 }
