--- a/src/main/resources/assets/worldreloader/lang/en_us.json
+++ b/src/main/resources/assets/worldreloader/lang/en_us.json
@@ -21,6 +21,13 @@
   "text.autoconfig.worldreloader.option.searchRadius": "Biome/Structure Search Radius",
   "text.autoconfig.worldreloader.option.Debug": "Debug Mode",
   "text.autoconfig.worldreloader.option.Debug.@Tooltip": "Enable Debug Mode",
+  "text.autoconfig.worldreloader.option.preserveBeacon": "Preserve Beacon Area",
+
+  "text.autoconfig.worldreloader.category.Line": "Line Module Settings",
+  "text.autoconfig.worldreloader.option.UseLine": "Use Line Module",
+  "text.autoconfig.worldreloader.option.width": "Line Width",
+  "text.autoconfig.worldreloader.option.tool": "Draw Line Tool",
+  "text.autoconfig.worldreloader.option.savedPositions": "Line Positions",
 
   "text.autoconfig.worldreloader.option.targetBlock": "Target Block",
   "text.autoconfig.worldreloader.option.targetBlock.@Tooltip": "The block that triggers terrain transformation",
