--- a/src/main/resources/assets/worldreloader/lang/zh_cn.json
+++ b/src/main/resources/assets/worldreloader/lang/zh_cn.json
@@ -21,6 +21,13 @@
   "text.autoconfig.worldreloader.option.searchRadius": "群系和结构的查找距离",
   "text.autoconfig.worldreloader.option.Debug": "Debug模式",
   "text.autoconfig.worldreloader.option.Debug.@Tooltip": "是否开启Debug模式",
+  "text.autoconfig.worldreloader.option.preserveBeacon": "保护信标区域",
+
+  "text.autoconfig.worldreloader.category.Line": "线生成模式设置",
+  "text.autoconfig.worldreloader.option.UseLine": "使用线生成模式",
+  "text.autoconfig.worldreloader.option.width": "线宽",
+  "text.autoconfig.worldreloader.option.tool": "画线工具",
+  "text.autoconfig.worldreloader.option.savedPositions": "线上面的坐标",
 
   "text.autoconfig.worldreloader.option.targetBlock": "目标方块",
   "text.autoconfig.worldreloader.option.targetBlock.@Tooltip": "触发地形改造的方块",
