--- a/src/main/resources/assets/worldreloader/lang/en_us.json
+++ b/src/main/resources/assets/worldreloader/lang/en_us.json
@@ -20,6 +20,7 @@
   "text.autoconfig.worldreloader.option.randomRadius": "Random Raidus",
   "text.autoconfig.worldreloader.option.searchRadius": "Biome/Structure Search Radius",
   "text.autoconfig.worldreloader.option.Debug": "Debug Mode",
+  "text.autoconfig.worldreloader.option.dimension": "Target Terrain Dimension",
   "text.autoconfig.worldreloader.option.Debug.@Tooltip": "Enable Debug Mode",
   "text.autoconfig.worldreloader.option.preserveBeacon": "Preserve Beacon Area",
 
